--- a/src/client/package.json
+++ b/src/client/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.2.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "sha1": "^1.1.1",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1"
