--- a/src/server/.htaccess
+++ b/src/server/.htaccess
@@ -6,6 +6,10 @@
 
 <IfModule mod_rewrite.c>
     RewriteEngine on
+
+    RewriteCond %{HTTP:Authorization} ^(.*)
+    RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
+
     RewriteRule    ^$    webroot/    [L]
     RewriteRule    (.*) webroot/$1    [L]
 </IfModule>
