--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,6 +9,7 @@
     "angular": "^1.6.6",
     "angular-jwt": "^0.1.9",
     "angular-route": "^1.6.6",
+    "angular-toastr": "^2.1.1",
     "bootstrap": "^3.3.7",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
